# FoodViz

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: huggingface-sync.yml  manual-trigger.yml  ploomber-cloud.yaml
agents/: parse_data.py
app/: Dockerfile  Home.py  app.py  main.py  ploomber-cloud.json  requirements.txt
app/.streamlit/: config.toml  secrets.toml
app/data/: food_groups.json  units_with_e.csv
app/pages/: 1_Viewer.py  ___init__.py  comparer.py  home.py  viewer.py  👁‍🗨️_Viewer.py  📊_Compare.py
app/src/: __init__.py  config.py  helpers.py
data/context_storage/: default__vector_store.json  docstore.json  index_store.json
foodviz/agents/: llm.py  parse_data.py
foodviz/data/: .~lock.food_local_langs_processed.csv#  food-types.csv  food_groups.json  food_local_langs.csv  food_local_langs_processed.csv  languages.csv  units_with_e.csv
foodviz/data/context_storage/: index_store.json
foodviz/pages/: comparer.py  home.py  search.py  viewer.py
foodviz/pages/frontend/: bubble.html
foodviz/utils/: config.py  helpers.py  state.py
pages/: __init__.py  comparer.py  search.py
src/: config.py  helpers.py  state.py  utils.py
src/agents/: parse_data.py
src/pages/: __init__.py  comparer.py  home.py  search.py  viewer.py
src/pages/frontend/: bubble.html  bubble.js
src/utils/: __init__.py  color_slider.py  config.py
